kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gati-lab

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
  labels:
    app: www
spec:
  replicas: 1
  selector:
    matchLabels:
      name: www
  template:
    metadata:
      labels:
        name: www
    spec:
      containers:
      - name: www
        #image: slaclab/cryo-recipes:0.1-2
        image: slaclab/cryo-recipes:0.2-0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: www
  labels:
    app: www
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    name: www

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
  #  nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
  #  nginx.ingress.kubernetes.io/client-max-body-size: "50m"
  #  nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
      - cryo-recipes.slac.stanford.edu
      secretName: tls-certificate
  rules:
    - host: cryo-recipes.slac.stanford.edu
      http:
        paths:
        - path: /
          backend:
            serviceName: www
            servicePort: 80
