kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
  #  nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
  #  nginx.ingress.kubernetes.io/client-max-body-size: "50m"
  #  nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
      - cryo-recipes.slac.stanford.edu
      secretName: tls-certificate
  rules:
    - host: cryo-recipes.slac.stanford.edu
      http:
        paths:
        - path: /api/
          backend:
            serviceName: db
            servicePort: 3000
        - path: /
          backend:
            serviceName: www
            servicePort: 80
